--- a/config.ini
+++ b/config.ini
@@ -28,7 +28,7 @@ mudlib directory : world
 # absolute pathname of driver/config dir
 # binary directory : .
 
-websocket http dir : www
+websocket http dir : ../www
 
 ###############################################################################
 # You shouldn't change anything below this point unless you know what         #
