Change config.ini for titania2

--- a/config.ini
+++ b/config.ini
@@ -19,16 +19,16 @@ mud ip : 0.0.0.0
 # the external ports we support
 external_port_1 : telnet 5555
 external_port_2 : telnet 6666
-external_port_3 : websocket 8888
+# external_port_3 : websocket 8888
 # external_port_4 : binary 8888
 
 # absolute pathname of mudlib
-mudlib directory : world
+mudlib directory : /srv/mud/xyj450/world
 
 # absolute pathname of driver/config dir
 # binary directory : .
 
-websocket http dir : ../www
+websocket http dir : /srv/mud/xyj450/www
 
 ###############################################################################
 # You shouldn't change anything below this point unless you know what         #
